<resources>
    <string name="app_name">math_for_kids_application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_rules">You will see three figures in front of you, two at the bottom and one at the top. Two of them will have numbers. The goal is to make the sum of the numbers in the two bottom figures equal to the number in the top figure. To achieve this, you need to insert the missing number.\n\nExample: If the number in the top circle is 7, one of the bottom ones has a question mark, and the other has the number 4. It means the missing number should be 3, because 3 + 4 = 7.</string>
    <string name="hello">Hello!</string>
    <string name="got_it">Got it!</string>
    <string name="select_level">Select level:</string>
    <string name="test">Test</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="correct_answers_s_minimum_s">Correct answers %s (minimum %s)</string>
    <string name="game_finished">Game finished</string>
    <string name="try_again">Try again!</string>
    <string name="your_score">Your score: %s</string>
    <string name="your_score_in">Your score in %%: %d%%</string>
    <string name="you_won">You won!</string>
    <string name="you_lose">You lose(</string>
    <string name="go_back">Go back!</string>
</resources>