<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.WelcomeFragment"
    android:background="@color/background_color"
    android:padding="20dp">

    <ImageView
        android:id="@+id/penguin_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/woman_count"
        app:layout_constraintDimensionRatio="6:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/degular_bold"
        android:text="@string/hello"
        android:textColor="@color/main_white"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_game_rules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/penguin_icon" />
    
    <TextView
        android:id="@+id/tv_game_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/degular_bold"
        android:text="@string/game_rules"
        android:textColor="@color/main_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_gotIt"
        app:layout_constraintTop_toBottomOf="@+id/penguin_icon"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/btn_gotIt"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/main_yellow"
        android:textSize="50sp"
        android:fontFamily="@font/degular_bold"
        android:text="@string/got_it"
        android:textColor="@color/main_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/got_it" />



</androidx.constraintlayout.widget.ConstraintLayout>